<resources>
    <string name="app_name">Python Labs</string>
    <string name="introduction">Introduction</string>
    <string name="python_labs">Python Labs</string>
    <string name="learn_python_from_starch">Learn python from starch</string>
    <string name="python_variables">Python Variables</string>
    <string name="title_activity_snake">snake</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="python_labs_will_be_updated_in_the_near_future_with_video_tutorials_and_will_also_add_an_ide_for_programming_in_python">Python Labs will be updated in the near future with video tutorials and will also add an IDE for programming in Python.</string>
    <string name="future_updates">Future Updates</string>
    <string name="as_a_software_engineer_and_a_data_scientist_my_skills_include_solid_problem_solving_abilities_as_well_as_experience_with_creating_apps_and_websites">As a Software Engineer and a Data Scientist, my skills include solid problem-solving abilities as well as experience with creating Apps and Websites.</string>
    <string name="hi_i_m_sahil_thakur">Hi, I\'m Sahil Thakur,</string>
    <string name="sahil_thakur">Sahil Thakur</string>
    <string name="email_iam_sahil_outlook_com">email: iam.sahil@outlook.com</string>
    <string name="about_the_developer">About the developer</string>
    <string name="rock_paper_scissor">Rock Paper Scissor</string>
    <string name="youtube_video_downloader">Youtube Video Downloader</string>
    <string name="basic">Basic</string>
    <string name="mad_libs_generator">Mad Libs Generator</string>
    <string name="basic_python_programs">Basic python programs</string>
    <string name="number_guessing">Number Guessing</string>
    <string name="basic_python_programs1">Basic Python Programs</string>
    <string name="sample_code">Sample Code</string>
    <string name="two_player_connection_game">two-player connection game</string>
    <string name="python_oop">Python OOP</string>
    <string name="loops_in_python">Loops in Python</string>
    <string name="python_datatype">Python Datatype</string>
    <string name="python_file_i_o">Python File I/O</string>
    <string name="if_else_statments">if else Statments</string>
    <string name="data_types_in_python_programming">Data types in python programming</string>
    <string name="data_types">Data Types</string>
    <string name="_2_python_list">2. Python List</string>
    <string name="n_n_in_the_python_programming_language_everything_is_an_object_data_types_in_python_represents_the_classes_the_objects_or_instances_of_these_classes_are_called_variables_let_us_now_discuss_the_different_kinds_of_data_types_in_python">\n \n In the Python Programming Language, everything is an object. Data types in Python represents the classes. The objects or instances of these classes are called variables. Let us now discuss the different kinds of data types in Python.</string>
    <string name="built_in_data_types_in_python">Built-in Data Types in Python</string>
    <string name="_1_python_numbers">1. Python Numbers</string>
    <string name="we_can_find_complex_numbers_floating_point_numbers_and_integers_in_the_category_of_python_numbers_complex_numbers_are_defined_as_a_complex_class_floating_point_numbers_are_defined_as_float_and_integers_are_defined_as_an_int_in_python">We can find complex numbers, floating point numbers and integers in the category of Python Numbers. Complex numbers are defined as a complex class, floating point numbers are defined as float and integers are defined as an int in Python.</string>
    <string name="_3_python_tuple">3. Python Tuple</string>
    <string name="_4_python_strings">4. Python Strings</string>
    <string name="_5_python_set">5. Python Set</string>
    <string name="_6_python_dictionary">6. Python Dictionary</string>
    <string name="connect_four">Connect Four</string>
    <string name="pong_game">Pong Game</string>
    <string name="games">Games</string>
    <string name="simple_python_games">Simple python Games</string>
    <string name="python_is_one_of_the_most_popular_programming_languages_currently_it_looks_like_this_trend_is_about_to_continue_in_2021_and_beyond_so_if_you_are_a_python_beginner_the_best_thing_you_can_do_is_work_on_some_real_time_python_project_ideas">Python is one of the most popular programming languages currently. It looks like this trend is about to continue in 2021 and beyond. So, if you are a Python beginner, the best thing you can do is work on some real-time Python project ideas.</string>
    <string name="basic_python_programs2">Basic Python Programs</string>
    <string name="snake_game">Snake Game</string>
    <string name="statements">Statements</string>
    <string name="syntax_of_if_else">Syntax of if else</string>
    <string name="if_else_statements_in_python_programming">if else statements in python programming</string>
    <string name="if_else_statement_in_python">if else statement in Python</string>
    <string name="decision_making_is_required_when_we_want_to_execute_a_code_only_if_a_certain_condition_is_satisfied_the_if_elif_else_statement_is_used_in_python_for_decision_making">Decision making is required when we want to execute a code only if a certain condition is satisfied.The if…elif…else statement is used in Python for decision making.</string>
    <string name="python_if_statement_syntax">Python if Statement Syntax</string>
    <string name="example_python_if_statement">Example: Python if Statement</string>
    <string name="python_if_elif_else_statement">Python if elif else Statement</string>
    <string name="example_of_if_elif_else">Example of if elif else</string>
    <string name="n_decision_making_is_required_when_we_want_to_execute_a_code_only_if_a_certain_condition_is_satisfied_the_if_elif_else_statement_is_used_in_python_for_decision_making">\n Decision making is required when we want to execute a code only if a certain condition is satisfied.The if…elif…else statement is used in Python for decision making</string>
    <string name="example_of_if_else">Example of if else</string>
    <string name="file_i_o">File I/O</string>
    <string name="file_operations_python">file operations python</string>
    <string name="opening_files_in_python">Opening Files in Python</string>
    <string name="python_has_a_built_in_open_function_to_open_a_file_this_function_returns_a_file_object_also_called_a_handle_as_it_is_used_to_read_or_modify_the_file_accordingly">Python has a built-in open() function to open a file. This function returns a file object, also called a handle, as it is used to read or modify the file accordingly.</string>
    <string name="writing_to_files_in_python">Writing to Files in Python</string>
    <string name="in_order_to_write_into_a_file_in_python_we_need_to_open_it_in_write_w_append_a_or_exclusive_creation_x_mode_we_need_to_be_careful_with_the_w_mode_as_it_will_overwrite_into_the_file_if_it_already_exists_due_to_this_all_the_previous_data_are_erased_writing_a_string_or_sequence_of_bytes_for_binary_files_is_done_using_the_write_method_this_method_returns_the_number_of_characters_written_to_the_file">In order to write into a file in Python, we need to open it in write w, append a or exclusive creation x mode.We need to be careful with the w mode, as it will overwrite into the file if it already exists. Due to this, all the previous data are erased.Writing a string or sequence of bytes (for binary files) is done using the write() method. This method returns the number of characters written to the file.</string>
    <string name="reading_files_in_python">Reading Files in Python</string>
    <string name="to_read_a_file_in_python_we_must_open_the_file_in_reading_r_mode_there_are_various_methods_available_for_this_purpose_we_can_use_the_read_size_method_to_read_in_the_size_number_of_data_if_the_size_parameter_is_not_specified_it_reads_and_returns_up_to_the_end_of_the_file_we_can_read_the_text_txt_file_we_wrote_in_the_above_section_in_the_following_way">To read a file in Python, we must open the file in reading r mode.There are various methods available for this purpose. We can use the read(size) method to read in the size number of data. If the size parameter is not specified, it reads and returns up to the end of the file.We can read the text.txt file we wrote in the above section in the following way:</string>
    <string name="closing_files_in_python">Closing Files in Python</string>
    <string name="when_we_are_done_with_performing_operations_on_the_file_we_need_to_properly_close_the_file_closing_a_file_will_free_up_the_resources_that_were_tied_with_the_file_it_is_done_using_the_close_method_available_in_python_python_has_a_garbage_collector_to_clean_up_unreferenced_objects_but_we_must_not_rely_on_it_to_close_the_file">When we are done with performing operations on the file, we need to properly close the file.Closing a file will free up the resources that were tied with the file. It is done using the close() method available in Python.Python has a garbage collector to clean up unreferenced objects but we must not rely on it to close the file.</string>
    <string name="n_when_we_want_to_read_from_or_write_to_a_file_we_need_to_open_it_first_when_we_are_done_it_needs_to_be_closed_so_that_the_resources_that_are_tied_with_the_file_are_freed_hence_in_python_a_file_operation_takes_place_in_the_following_order">\n When we want to read from or write to a file, we need to open it first. When we are done, it needs to be closed so that the resources that are tied with the file are freed.Hence, in Python, a file operation takes place in the following order:</string>
    <string name="todo">TODO</string>
    <string name="loops">loops</string>
    <string name="loops_in_python_programming">loops in python programming</string>
    <string name="what_is_for_loop_in_python">What is for loop in Python?</string>
    <string name="the_for_loop_in_python_is_used_to_iterate_over_a_sequence_list_tuple_string_or_other_iterable_objects_iterating_over_a_sequence_is_called_traversal">The for loop in Python is used to iterate over a sequence (list, tuple, string) or other iterable objects. Iterating over a sequence is called traversal.</string>
    <string name="example_python_for_loop">Example: Python for Loop</string>
    <string name="what_is_while_loop_in_python">What is while loop in Python?</string>
    <string name="this_project_is_an_exciting_fun_game_for_beginners_to_build_up_the_program_generates_a_random_number_from_1_to_10_or_1_to_100_any_range_that_is_specified_and_the_user_must_guess_the_number_after_a_hint_from_the_computer_every_time_a_user_s_guess_is_wrong_they_are_prompted_with_more_hints_to_make_it_easier_for_them_to_guess_the_number_but_at_the_cost_of_reducing_the_score_the_clue_any_math_clue_like_multiples_divisible_greater_or_smaller_or_a_combination_of_all">This project is an exciting fun game for beginners to build up. The program generates a random number from 1 to 10, or 1 to 100 any range that is specified and the user must guess the number after a hint from the computer. Every time a user’s guess is wrong they are prompted with more hints to make it easier for them to guess the number but at the cost of reducing the score. The clue any math clue like multiples, divisible, greater or smaller, or a combination of all.</string>
</resources>