<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".numgss">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kkb"
                android:text="@string/basic"
                android:textColor="@color/black"
                android:textSize="26sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.097"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.048" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/basic_python_programs"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.097"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.048" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/l1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll1">


            <ImageView
                android:id="@+id/img1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:src="@drawable/gss"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="8dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/this_project_is_an_exciting_fun_game_for_beginners_to_build_up_the_program_generates_a_random_number_from_1_to_10_or_1_to_100_any_range_that_is_specified_and_the_user_must_guess_the_number_after_a_hint_from_the_computer_every_time_a_user_s_guess_is_wrong_they_are_prompted_with_more_hints_to_make_it_easier_for_them_to_guess_the_number_but_at_the_cost_of_reducing_the_score_the_clue_any_math_clue_like_multiples_divisible_greater_or_smaller_or_a_combination_of_all"
                android:textAlignment="center"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/sc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/kkb"
                android:text="@string/sample_code"
                android:textAlignment="center"
                android:textColor="#F06292"
                android:textSize="25sp" />

            <RelativeLayout
                android:id="@+id/b1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/grey"
                android:clickable="true"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textAlignment="center"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
                android:focusable="true">
                <thereisnospon.codeview.CodeView
                    android:id="@+id/cdv1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
